# pycord

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: release.yml
discord/: __version.py  http.py  user.py
discord/commands/: options.py
discord/models/: __init__.py  generate.py  routes.txt
discord/models/definitions/: __init__.py  user.py
discord/models/flags/: base.py  user.py
discord/models/gateway/: ready.py
discord/models/type/: __init__.py  snowflake.py
discord/models/utils/: __init__.py
requirements/: dev.txt
