[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "paillcord"
authors = [
    {name = "Pycord Development"}
]
description = "A Python wrapper for the Discord API"
readme = {content-type = "text/x-rst", file = "README.rst"}
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "aiohttp>=3.6.0,<4.0",
    "typing-extensions>=4,<5",
]

[project.urls]
Homepage = "https://pycord.dev"
Changelog = "https://docs.pycord.dev/en/master/changelog.html"
Source = "https://github.com/Pycord-Development/pycord"
Documentation = "https://docs.pycord.dev"
Tracker = "https://github.com/Pycord-Development/pycord/issues"
Funding = "https://patreon.com/pycord"

[project.optional-dependencies]
voice = [
    "pynacl>=1.3.0,<1.6",
]
speed = [
    "aiohttp[speedups]>=3.11.18",
    "msgspec~=0.19.0",
]

[dependency-groups]
#docs = [
#    "furo==2024.8.6",
#    "levenshtein==0.27.1",
#    "myst-parser[linkify]==4.0.0",
#    "sphinx==8.0.2",
#    "sphinx-autodoc-typehints==2.2.3",
#    "sphinx-copybutton==0.5.2",
#    "sphinx-intl==2.3.1",
#    "sphinxcontrib-trio==1.1.2",
#    "sphinxcontrib-websupport==2.0.0",
#    "sphinxext-opengraph==0.9.1",
#    "typing-extensions==4.13.1",
#]
dev = [
    "codespell==2.4.1",
    "coverage~=7.8",
    "mypy~=1.15.0",
    "pre-commit==4.2.0",
    "pytest~=8.3.5",
    "pytest-asyncio~=0.24.0",
    "bandit==1.8.3",
    "codespell==2.4.1",
    "flake8==7.1.2",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "discord/_version.py"

[tool.hatch.build.targets.wheel]
only-packages = true
packages = ["discord"]
only-include = ["discord", "LICENSE", "pyproject.toml", "discord/bin/*.dll"]
artifacts = ["discord/bin/*.dll"]

[tool.hatch.build.targets.sdist]
only-packages = true
packages = ["discord"]
only-include = ["discord", "README.rst", "LICENSE", "pyproject.toml", "discord/bin/*.dll"]
artifacts = ["discord/bin/*.dll"]

[tool.black]
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"

[tool.mypy]
namespace_packages = true
install_types = true
strict = true
show_error_codes = true
#allow_untyped_decorators = true
#allow_untyped_calls = true
ignore_errors = true

[tool.pylint.main]
extension-pkg-whitelist = [
    "pydantic",
    "ujson"
]
py-version = 3.9

[tool.pylint.messages_control]
enable = [
    "bad-indentation",
    "line-too-long"
]
disable = [
    "protected-access",
    "fixme"
]

[tool.pylint.format]
indent-string = '    '
max-line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
